# ai-candidate-evaluator

./: .deploy-test  .gitignore  .railwayignore  PRD_AI_Candidate_Evaluator_V1.md  README.md  TESTING.md  plum_builders_residency_brief.md  railway.json
backend/: .dockerignore  .env.example  BACKEND_STATUS.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_rubric_list.py  0003_candidate_review_fields.py  0004_incomplete_expiry_days.py  0005_candidate_thread_fields.py  0006_candidate_subject_field.py  0007_last_polled_at.py
backend/app/: auth.py  config.py  db.py  llm.py  logging_setup.py  main.py  models.py  schemas.py
backend/app/emails/: templates.py
backend/app/gmail/: client.py  poller.py
backend/app/jobs/: handlers.py  queue.py  worker.py
backend/app/pipeline/: classify.py  decide.py  escalate.py  extract.py  github.py  portfolio.py  resume.py  score.py  structure.py
backend/app/routes/: candidates.py  logs.py  metrics.py  poll.py  settings.py
backend/scripts/: get_gmail_refresh_token.py  show_sonnet_input.py  test_gmail.py  trace_email.py
backend/tests/: conftest.py  test_auth.py  test_decide.py  test_e2e.py  test_extract.py  test_gmail_live.py  test_metrics.py  test_resume_docx.py  test_rubric_schema.py  test_score_compute.py  test_score_prompt.py  test_settings_api.py  test_structure_and_parsers.py  test_templates.py
backend/tests/acceptance/: README.md  build_fixtures.py  ingest_gmail.py  scenarios.json
backend/tools/: demo_replay.py
web/: .env.example  .gitignore  FRONTEND.md  auth.ts  (+8 more)
(+38 files in other folders)
